--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,48 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 34
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.canakkoca.andzu"
-        minSdkVersion 15
-        targetSdkVersion 26
+        minSdkVersion 29
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
+            matchingFallbacks = ['release']
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
     }
+    namespace 'com.canakkoca.sample'
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':Andzu')
+    implementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile project(':Andzu')
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    }
+    implementation 'com.android.support:multidex:2.0.1'
+    testImplementation 'junit:junit:4.13.2'
+    implementation "androidx.viewpager:viewpager:1.0.0"
+    implementation "com.android.support:appcompat-v7:22.1.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.9.0"))
+    implementation 'junit:junit:4.12'
+
 }
