--- a/Andzu/build.gradle
+++ b/Andzu/build.gradle
@@ -49,5 +49,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.9.0"))
     androidTestImplementation 'junit:junit:4.12'
-
+    implementation 'com.android.support:design:28.0.0-alpha3'
 }
