--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.9.0"))
     implementation 'junit:junit:4.12'
-
+    implementation 'com.android.support:design:28.0.0-alpha3'
 }
